fix: atf image on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -19,16 +19,31 @@
     aspect-ratio: 3 / 1;
   }
   .btn.primary {
-    background: radial-gradient(143.58% 143.58% at -0% -0%, #7cdfff 0%, #13b6ec 100%), #00c0ff;
+    --p1: 143.58%;
+    --p2: 143.58%;
+    --p3: -0%;
+    --c1: #13b6ec;
+    --c2: #00c0ff;
+    background: radial-gradient(var(--p1) var(--p2) at var(--p3) -0%, #7cdfff 0%, #13b6ec 100%), var(--c2);
+    transition-property: --c2, --p1, --p2, --p3;
+    transition-duration: 0.5s;
+    transition-timing-function: ease;
     color: #12141d;
   }
   .btn.primary:hover {
-    background: radial-gradient(62.94% 102.41% at 42.22% -0%, #7cd0ff 0%, #71dcff 100%);
+    --p1: 62.94%;
+    --p2: 102.41%;
+    --p3: 42.22%;
+    --c1: #71dcff;
+    --c2: transparent;
+    /* background: radial-gradient(var(--p1) var(--p2) at var(--p3) -0%, #7cd0ff 0%, #71dcff 100%), var(--c2); */
   }
   .btn.secondary {
     background: rgba(255, 255, 255, 0.1);
     color: white;
     backdrop-filter: blur(6px);
+    will-change: color, background;
+    transition: all 0.2s ease;
   }
   .btn.secondary:hover {
     background: rgba(0, 192, 255, 0.1);
@@ -40,7 +55,6 @@
     background: rgba(255, 255, 255, 0.10);
     backdrop-filter: blur(6px);
   }
-  
   .gradient-heading::after {
     content: '';
     position: absolute;
